# libnx

./: .doozer.json  .gitignore  CODESTYLE.md  Changelog.md  LICENSE.md  Makefile  README.md  acc_8h.html  acc_8h_source.html  address__space_8h_source.html  aes_8h.html  aes_8h_source.html  aes__cbc_8h.html  aes__cbc_8h_source.html  aes__ctr_8h.html  aes__ctr_8h_source.html  aes__xts_8h.html  aes__xts_8h_source.html  album__la_8h.html  album__la_8h_source.html  annotated.html  apm_8h.html  apm_8h_source.html  applet_8h.html  applet_8h_source.html  async_8h.html  async_8h_source.html  aud_8h.html  aud_8h_source.html  audctl_8h.html  audctl_8h_source.html  auddev_8h.html  auddev_8h_source.html  audin_8h.html  audin_8h_source.html  audio_8h.html  audio_8h_source.html  audout_8h.html  audout_8h_source.html  audrec_8h.html  (+1304 more)
nx/: .gitignore  Doxyfile  Makefile  meson.build  switch.ld  switch.specs  switch_rules
nx/include/: netdb.h  poll.h  svc.h  switch.h
nx/include/machine/: _threads.h
nx/include/net/: bpf.h  if.h  route.h
nx/include/netinet/: in.h  tcp.h  udp.h
nx/include/switch/: arm.h  crypto.h  heap.h  ipc.h  nacp.h  nca.h  nro.h  os.h  result.h  svc.h  types.h
nx/include/switch/applets/: album_la.h  error.h  friends_la.h  hid_la.h  libapplet.h  mii_la.h  nfp_la.h  nifm_la.h  pctlauth.h  psel.h  swkbd.h  web.h  web_wifi.h
nx/include/switch/arm/: atomics.h  cache.h  counter.h  thread_context.h  tls.h
nx/include/switch/audio/: audio.h  driver.h
nx/include/switch/crypto/: aes.h  aes_cbc.h  aes_ctr.h  aes_xts.h  cmac.h  crc.h  hmac.h  sha1.h  sha256.h
nx/include/switch/devices/: fs_dev.h  usb_comms.h  usb_dev.h
nx/include/switch/display/: binder.h  buffer_producer.h  framebuffer.h  gfx.h  ioctl.h  native_window.h  nvgfx.h  nvioctl.h  parcel.h  types.h
nx/include/switch/gfx/: binder.h  buffer_producer.h  gfx.h  gfxproducer.h  ioctl.h  nvgfx.h  nvioctl.h  parcel.h
nx/include/switch/kernel/: barrier.h  cond_var.h  condvar.h  detect.h  event.h  ipc.h  jit.h  levent.h  mutex.h  random.h  rwlock.h  semaphore.h  shmem.h  svc.h  thread.h  tmem.h  uevent.h  utimer.h  version.h  virtmem.h  wait.h  waiter.h
nx/include/switch/nvidia/: address_space.h  buffer.h  channel.h  fence.h  gpu.h  gpu_channel.h  graphic_buffer.h  info.h  ioctl.h  map.h  nvmap.h  rect.h  types.h
nx/include/switch/nvidia/cmds/: 3d.h  3d_clear.h  3d_rendertarget.h  3d_viewport.h  common.h  dma.h  dma_clear.h  dma_copy.h  vn.h
nx/include/switch/nvidia/gpu/: 3d_ctx.h  cmd_list.h  error_notifier.h  gpfifo.h  gpu.h  zcull_ctx.h
nx/include/switch/runtime/: btdev.h  diag.h  env.h  hosversion.h  nxlink.h  pad.h  resolver.h  ringcon.h
nx/include/switch/runtime/devices/: console.h  fs_dev.h  (+3 more)
nx/include/switch/services/: acc.h  apm.h  applet.h  async.h  aud.h  audctl.h  auddev.h  audin.h  audout.h  audrec.h  audren.h  avm.h  binder.h  bpc.h  bsd.h  bt.h  btdrv.h  btdrv_ids.h  btdrv_types.h  btm.h  btm_types.h  btmsys.h  btmu.h  capmtp.h  caps.h  capsa.h  capsc.h  capsdc.h  capssc.h  capssu.h  capsu.h  clkrst.h  csrng.h  ectx.h  es.h  fan.h  fatal.h  friends.h  fs.h  fsldr.h  (+61 more)
nx/include/switch/sf/: cmif.h  hipc.h  service.h  sessionmgr.h  tipc.h
nx/include/switch/util/: utf.h
nx/include/sys/: ioccom.h  socket.h  sockio.h  sysctl.h
nx/source/: internal.h  svc.s
nx/source/applets/: album_la.c  error.c  error.cpp  friends_la.c  hid_la.c  libapplet.c  libapplet_internal.h  mii_la.c  nfp_la.c  nifm_la.c  pctlauth.c  psel.c  swkbd.c  web.c  web_wifi.c
nx/source/arm/: atomics.c  cache.s
nx/source/audio/: driver.c  driver_internal.h  mempool.c  mix_object.c  sink.c  voice.c
nx/source/crypto/: aes.c  aes_cbc.c  aes_ctr.c  aes_xts.c  cmac.c  hmac.c  sha1.c  sha256.c
nx/source/devices/: console.c  fs_dev.c  usb_comms.c  usb_dev.c
nx/source/display/: binder.c  buffer_producer.c  default_window.c  framebuffer.c  gfx.c  native_window.c  nvgfx.c  parcel.c
nx/source/display/ioctl/: nvhost-as-gpu.c  nvhost-ctrl-gpu.c
nx/source/gfx/: binder.c  buffer_producer.c  gfx.c  gfxproducer.c  nvgfx.c  nvioctl.c  parcel.c
nx/source/gfx/ioctl/: channel.c  nvhost-as-gpu.c  nvhost-ctrl-gpu.c  nvhost-ctrl.c  nvmap.c
nx/source/heap/: heap.c
nx/source/kernel/: barrier.c  cache.s  cond_var.c  condvar.c  detect.c  event.c  ipc.c  jit.c  levent.c  mutex.c  random.c  rwlock.c  semaphore.c  shmem.c  svc.s  thread.c  tmem.c  uevent.c  uevent.h  utimer.c  utimer.h  version.c  virtmem.c  wait.c  wait.h  waiter.c  waiter.h
nx/source/nvidia/: address_space.c  buffer.c  channel.c  fence.c  gpu.c  gpu_channel.c  info.c  map.c  nvmap.c
nx/source/nvidia/cmds/: 3d.c  3d_clear.c  3d_init.c  3d_rendertarget.c  3d_viewport.c  common.c  dma_clear.c  dma_copy.c  dma_memset.c
nx/source/nvidia/gpu/: 3d_ctx.c  cmd_list.c  error_notifier.c  gpfifo.c  gpu.c  zcull_ctx.c
nx/source/nvidia/ioctl/: channel.c  nvchannel.c  nvhost-as-gpu.c  nvhost-ctrl-gpu.c  nvhost-ctrl.c  nvmap.c
nx/source/runtime/: alloc.c  alloc.h  argv.c  btdev.c  c11-threads.c  diag.c  dynamic.c  env.c  exception.s  hosversion.c  init.c  nacp.c  newlib.c  nxlink.c  nxlink_stdio.c  pad.c  resolver.c  ringcon.c  switch_crt0.s
nx/source/runtime/devices/: console.c  console_debug.c  console_sw.c  convert_errno.c  fs_dev.c  path_buf.c  path_buf.h  romfs_dev.c  socket.c  usb_comms.c
nx/source/runtime/util/: inet_addr.c  list.c
nx/source/services/: acc.c  apm.c  applet.c  async.c  aud.c  audctl.c  auddev.c  audin.c  audout.c  audrec.c  audren.c  avm.c  binder.c  bpc.c  bsd.c  bt.c  btdrv.c  btm.c  btmsys.c  btmu.c  capmtp.c  caps.c  capsa.c  capsc.c  capsdc.c  capssc.c  capssu.c  capsu.c  clkrst.c  csrng.c  ectx.c  es.c  fan.c  fatal.c  friends.c  fs.c  fsldr.c  fspr.c  gpio.c  grc.c  (+58 more)
nx/source/sf/: sessionmgr.c
nx/source/srv/: sm.c
nx/source/system/: appExit.c  appInit.c  dynamic.c  init.c  initArgv.c  initSystem.c  newlib.c  nx_exit.c  readtp.s  syscalls.c  sysinit.s
nx/source/util/utf/: decode_utf16.c  decode_utf8.c  encode_utf16.c  encode_utf8.c  utf16_to_utf32.c  utf16_to_utf8.c  utf32_to_utf16.c  utf32_to_utf8.c  utf8_to_utf16.c  utf8_to_utf32.c
(+223 files in other folders)
